--- a/BabyClock/Base.lproj/Main.storyboard
+++ b/BabyClock/Base.lproj/Main.storyboard
@@ -23,13 +23,13 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="78"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RyE-hi-dMK" id="HtD-Ry-m5o">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12月15日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fMV-7n-top">
-                                            <rect key="frame" x="216" y="8" width="70" height="21"/>
+                                            <rect key="frame" x="186" y="8" width="100" height="21"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="70" id="SZH-WX-uH5"/>
+                                                <constraint firstAttribute="width" constant="100" id="SZH-WX-uH5"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -48,9 +48,9 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="共睡眠" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwq-8V-Aho">
-                                            <rect key="frame" x="216" y="37" width="70" height="32.5"/>
+                                            <rect key="frame" x="186" y="37" width="100" height="32.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12时50分" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0l2-8b-GL2">
@@ -200,7 +200,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YX8-iY-bKG">
+                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YX8-iY-bKG">
                                 <rect key="frame" x="16" y="476" width="86" height="133.5"/>
                                 <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <gestureRecognizers/>
@@ -348,31 +348,26 @@
                                 <color key="textColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="dvf-Ja-53i">
-                                <rect key="frame" x="16" y="20" width="343" height="448"/>
+                            <view contentMode="scaleToFill" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="zUA-pI-WwD">
+                                <rect key="frame" x="0.0" y="20" width="375" height="448"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="YX8-iY-bKG" firstAttribute="top" secondItem="dvf-Ja-53i" secondAttribute="bottom" constant="8" id="0En-0b-tCD"/>
                             <constraint firstItem="1cH-JD-b8j" firstAttribute="bottom" secondItem="aXH-8Y-gxv" secondAttribute="bottom" id="0Fe-Fo-3oS"/>
                             <constraint firstItem="VSt-Ik-mGk" firstAttribute="centerX" secondItem="lG6-F5-cIh" secondAttribute="centerX" id="14n-tz-LgY"/>
                             <constraint firstItem="9YD-Pp-LYw" firstAttribute="centerX" secondItem="pFM-VM-FdV" secondAttribute="centerX" id="1bH-3W-QUE"/>
                             <constraint firstItem="oW0-GH-vnx" firstAttribute="width" secondItem="aXH-8Y-gxv" secondAttribute="width" id="37E-I3-rBZ"/>
                             <constraint firstItem="oW0-GH-vnx" firstAttribute="leading" secondItem="183-Fv-7g8" secondAttribute="trailing" id="5yA-b3-9F3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="zUA-pI-WwD" secondAttribute="trailing" constant="-16" id="76d-CV-vYC"/>
                             <constraint firstItem="pFM-VM-FdV" firstAttribute="bottom" secondItem="oW0-GH-vnx" secondAttribute="bottom" id="8hp-WS-ayg"/>
                             <constraint firstItem="Obc-mq-3FC" firstAttribute="top" secondItem="aXH-8Y-gxv" secondAttribute="bottom" constant="8.5" id="93f-rD-e4k"/>
                             <constraint firstItem="lG6-F5-cIh" firstAttribute="centerX" secondItem="183-Fv-7g8" secondAttribute="centerX" id="Agq-GE-E8w"/>
                             <constraint firstItem="ppT-hf-sV1" firstAttribute="top" secondItem="zKy-O6-IKk" secondAttribute="bottom" constant="8" symbolic="YES" id="BED-pQ-7FJ"/>
                             <constraint firstItem="qSf-8t-LcK" firstAttribute="top" secondItem="tbB-pH-D45" secondAttribute="bottom" constant="8" symbolic="YES" id="CKX-aR-eWx"/>
                             <constraint firstItem="zKy-O6-IKk" firstAttribute="top" secondItem="183-Fv-7g8" secondAttribute="top" id="DKz-Ni-bGL"/>
-                            <constraint firstAttribute="leadingMargin" secondItem="dvf-Ja-53i" secondAttribute="leading" id="FbK-jH-3cd"/>
                             <constraint firstItem="tbB-pH-D45" firstAttribute="centerX" secondItem="YX8-iY-bKG" secondAttribute="centerX" id="GFI-Om-A1o"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="dvf-Ja-53i" secondAttribute="trailing" id="JIn-HG-CkK"/>
                             <constraint firstItem="Obc-mq-3FC" firstAttribute="top" secondItem="oW0-GH-vnx" secondAttribute="bottom" constant="8.5" id="JQP-9z-nym"/>
                             <constraint firstItem="jbc-vw-jNd" firstAttribute="top" secondItem="0l5-g6-lkA" secondAttribute="bottom" constant="8" symbolic="YES" id="LQL-b2-7Z2"/>
                             <constraint firstItem="pFM-VM-FdV" firstAttribute="top" secondItem="9YD-Pp-LYw" secondAttribute="bottom" constant="8" symbolic="YES" id="LVg-6t-R9r"/>
@@ -384,8 +379,9 @@
                             <constraint firstItem="0l5-g6-lkA" firstAttribute="centerX" secondItem="aXH-8Y-gxv" secondAttribute="centerX" id="b6l-yH-E7s"/>
                             <constraint firstItem="XXG-yf-hba" firstAttribute="centerX" secondItem="GpD-Jd-ujx" secondAttribute="centerX" id="c5s-Wc-LWv"/>
                             <constraint firstItem="4IN-pd-yLe" firstAttribute="centerX" secondItem="mGY-6z-Ux2" secondAttribute="centerX" id="crQ-JN-l83"/>
+                            <constraint firstItem="zUA-pI-WwD" firstAttribute="leading" secondItem="8Hr-iD-Hss" secondAttribute="leadingMargin" constant="-16" id="dAg-hg-Xb5"/>
                             <constraint firstItem="GpD-Jd-ujx" firstAttribute="centerX" secondItem="oW0-GH-vnx" secondAttribute="centerX" id="dj9-0b-Vss"/>
-                            <constraint firstItem="dvf-Ja-53i" firstAttribute="top" secondItem="VWb-0X-GxX" secondAttribute="bottom" id="dyL-jB-iJt"/>
+                            <constraint firstItem="YX8-iY-bKG" firstAttribute="top" secondItem="zUA-pI-WwD" secondAttribute="bottom" constant="8" id="eGV-lA-WyP"/>
                             <constraint firstItem="aXH-8Y-gxv" firstAttribute="leading" secondItem="oW0-GH-vnx" secondAttribute="trailing" id="eqx-6t-Tm1"/>
                             <constraint firstItem="ppT-hf-sV1" firstAttribute="centerX" secondItem="zKy-O6-IKk" secondAttribute="centerX" id="giG-Ro-vph"/>
                             <constraint firstAttribute="leadingMargin" secondItem="YX8-iY-bKG" secondAttribute="leading" id="grG-rM-AsF"/>
@@ -398,6 +394,7 @@
                             <constraint firstItem="YX8-iY-bKG" firstAttribute="bottom" secondItem="mGY-6z-Ux2" secondAttribute="bottom" id="lgy-NK-pnI"/>
                             <constraint firstItem="mGY-6z-Ux2" firstAttribute="top" secondItem="4IN-pd-yLe" secondAttribute="bottom" constant="8" symbolic="YES" id="lu2-LN-ofi"/>
                             <constraint firstItem="1cH-JD-b8j" firstAttribute="centerX" secondItem="aXH-8Y-gxv" secondAttribute="centerX" id="lzL-0F-QrW"/>
+                            <constraint firstItem="zUA-pI-WwD" firstAttribute="top" secondItem="VWb-0X-GxX" secondAttribute="bottom" id="mks-Dv-RvF"/>
                             <constraint firstItem="jbc-vw-jNd" firstAttribute="centerX" secondItem="0l5-g6-lkA" secondAttribute="centerX" id="oK7-Lx-Ynn"/>
                             <constraint firstItem="183-Fv-7g8" firstAttribute="leading" secondItem="YX8-iY-bKG" secondAttribute="trailing" id="qvt-6C-RGG"/>
                             <constraint firstItem="1cH-JD-b8j" firstAttribute="top" secondItem="MQj-18-BYy" secondAttribute="bottom" constant="8" symbolic="YES" id="r48-qb-wgk"/>
@@ -410,6 +407,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="计时器" id="kWP-bj-aXJ"/>
                     <connections>
+                        <outlet property="chartsContainer" destination="zUA-pI-WwD" id="9fp-Al-1i9"/>
                         <outlet property="eat" destination="oW0-GH-vnx" id="ddZ-C9-L4u"/>
                         <outlet property="eatInterval" destination="pFM-VM-FdV" id="PdO-Wi-KJb"/>
                         <outlet property="eatTime" destination="XXG-yf-hba" id="SX2-aj-nbI"/>
@@ -561,7 +559,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0si-7O-nkc" id="TXu-V5-VYP">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vQh-vZ-Qdv">
@@ -582,7 +580,7 @@
                                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yCT-rm-b9z" id="f0W-jt-gjf">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kua-N3-cny">
@@ -603,7 +601,7 @@
                                         <rect key="frame" x="0.0" y="88" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="InB-Jk-R8m" id="v7E-49-HyW">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
